@@ -144,9 +144,9 @@ hausmannite,NA,Mn3O4,cr,RH95,NA,2020-08-15,CGL,J,-1282500,-1384500,164.1,142.02,
 manganese,NA,Mn,cr,RH95,NA,2020-08-15,CGL,J,0,0,32.01,26.19,7.354,0,0.041345,-272170,313.29,-1.3745E-05,0,0,980
 Mn(OH)2,NA,Mn(OH)2,cr,WEP+82.1,SUF+98,2020-08-15,CGL,J,-615000,-695400,99.2,114.7,NA,139.61,-0.08525,0,0,0,0,0,700
 huebnerite,NA,MnWO4,cr,RH95,LX20,2020-09-10,CGL,J,-1235400,-1337600,132.5,NA,41.89,155.68,0.0915,53000,-1170,-5.31E-05,0,0,1000
-linnaeite,NA,Co3S4,cr,VC78,RH95.8,2020-10-06,CGL,cal,-83400,-85800,44.1,39.72,62.55,39.72,0,0,0,0,0,0,937
+linnaeite,NA,Co3S4,cr,RH95,PMW87.1,2023-02-10,CGL,J,-334900,-347500,176,162.6321,62.55,153,0.0825,-1340000,0,0,0,0,937
 cattierite,NA,CoS2,cr,RH95,NA,2020-10-06,CGL,J,-145100,-150900,74.8,68.26,25.52,65.82,0.03032,-587000,0,0,0,0,1223
-Co-pentlandite,NA,Co9S8,cr,VC78,MP20,2020-10-06,CGL,cal,-199500,-203400,125,96.67,141.78,96.67,0,0,0,0,0,0,1107
+Co-pentlandite,NA,Co9S8,cr,PMW87,WV22,2023-02-10,CGL,J,-816330,NA,410.752,NA,149.33,39.5,0.0271,-379000,0,0,0,0,1107
 cobalt,NA,Co,cr,RH95,NA,2020-10-06,CGL,J,0,0,30.04,24.81,6.67,0,0.041844,-156460,268.75,-1.6498E-05,0,0,700
 wustite,NA,Fe0.947O,cr,RH95,NA,2020-11-10,CGL,J,-244900,-266300,56.6,48.13,12.04,-19.3,0.03017,-2533000,1501,0,0,0,1652
 willemite,NA,Zn2SiO4,cr,RH95,BKK77,2021-03-22,CGL,J,-1523100,-1636700,131.4,123.3,52.42,144.892,0.036945,-3029200,0,0,0,0,1785
